Update generated documentation 0.0.2

--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -35,6 +35,13 @@
       <div class="row">
         <div class="span9" id="main">
           
+<h3><a name="0-0-2" class="anchor" href="#0-0-2">0.0.2</a></h3>
+
+<ul>
+<li>Added MySQL base Configuration (works with EF 6.0 and MySQL 6.8.3).</li>
+<li>Change init code (add contructor parameter).</li>
+</ul>
+
 <h3><a name="0-0-1" class="anchor" href="#0-0-1">0.0.1</a></h3>
 
 <ul>
