--- a/references/index.html
+++ b/references/index.html
@@ -40,6 +40,7 @@
 
 <h2><a name="Overview" class="anchor" href="#Overview">Overview</a></h2>
     <a href="#Yaaf.Database">Yaaf.Database</a><br />
+    <a href="#Yaaf.Database.MySQL">Yaaf.Database.MySQL</a><br />
 
     <h2><a href="#Overview"><img src="https://matthid.github.io/Yaaf.Database/content/img/back_to_top.png" alt="Back to top" /></a> <a name="Yaaf.Database" class="anchor" href="#Yaaf.Database">Yaaf.Database Namespace</a></h2>
     <div>
@@ -74,6 +75,12 @@
         </tr>
         <tr>
           <td class="type-name">
+            <a href="yaaf-database-mssqlconfiguration-1.html">MSSQLConfiguration<'T></a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+        <tr>
+          <td class="type-name">
             <a href="yaaf-database-mycreatedatabaseifnotexists-1.html">MyCreateDatabaseIfNotExists<'TContext></a>
           </td>
           <td class="xmldoc"></td>
@@ -87,6 +94,29 @@
         <tr>
           <td class="type-name">
             <a href="yaaf-database-nunitinitializer-1.html">NUnitInitializer<'TContext></a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+    </tbody>
+  </table>
+
+    </div>
+    <h2><a href="#Overview"><img src="https://matthid.github.io/Yaaf.Database/content/img/back_to_top.png" alt="Back to top" /></a> <a name="Yaaf.Database.MySQL" class="anchor" href="#Yaaf.Database.MySQL">Yaaf.Database.MySQL Namespace</a></h2>
+    <div>
+        <table class="table table-bordered type-list">
+    <thead>
+      <tr><td>Type</td><td>Description</td></tr>
+    </thead>
+    <tbody>
+        <tr>
+          <td class="type-name">
+            <a href="yaaf-database-mysql-mysqlconfiguration-1.html">MySQLConfiguration<'T></a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+        <tr>
+          <td class="type-name">
+            <a href="yaaf-database-mysql-mysqlhistorycontext.html">MySqlHistoryContext</a>
           </td>
           <td class="xmldoc"></td>
         </tr>
