--- a/references/yaaf-database-emptyconfiguration.html
+++ b/references/yaaf-database-emptyconfiguration.html
@@ -53,14 +53,18 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '8', 8)" onmouseover="showTip(event, '8', 8)">
+          <code onmouseout="hideTip(event, '10', 10)" onmouseover="showTip(event, '10', 10)">
             new()
           </code>
-          <div class="tip" id="8">
-            <strong>Signature:</strong> unit -&gt; unit<br />
+          <div class="tip" id="10">
+            <strong>Signature:</strong> unit -&gt; EmptyConfiguration<br />
                       </div>
         </td>
         <td class="xmldoc">
+            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/EmptyConfiguration.fs#L13-13" class="github-link">
+              <img src="../content/img/github.png" class="normal" />
+              <img src="../content/img/github-blue.png" class="hover" />
+            </a>
           
         </td>
       </tr>
