--- a/references/yaaf-database-mssqlconfiguration-1.html
+++ b/references/yaaf-database-mssqlconfiguration-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>MyDropCreateDatabaseIfModelChanges<'TContext> - Yaaf.Database</title>
+    <title>MSSQLConfiguration<'T> - Yaaf.Database</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Matthias Dittrich">
@@ -38,7 +38,7 @@
 
 
 
-<h1>MyDropCreateDatabaseIfModelChanges<'TContext> </h1>
+<h1>MSSQLConfiguration<'T> </h1>
 <div class="xmldoc">
     Defined in Yaaf.Database.dll.
 </div>
@@ -53,15 +53,15 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '19', 19)" onmouseover="showTip(event, '19', 19)">
-            new(seedMethod)
+          <code onmouseout="hideTip(event, '17', 17)" onmouseover="showTip(event, '17', 17)">
+            new()
           </code>
-          <div class="tip" id="19">
-            <strong>Signature:</strong> (seedMethod:(&#39;TContext -&gt; unit)) -&gt; MyDropCreateDatabaseIfModelChanges&lt;&#39;TContext&gt;<br />
+          <div class="tip" id="17">
+            <strong>Signature:</strong> unit -&gt; MSSQLConfiguration&lt;&#39;T&gt;<br />
                       </div>
         </td>
         <td class="xmldoc">
-            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/NUnitInitializer.fs#L13-13" class="github-link">
+            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/EmptyConfiguration.fs#L20-20" class="github-link">
               <img src="../content/img/github.png" class="normal" />
               <img src="../content/img/github-blue.png" class="hover" />
             </a>
