--- a/references/yaaf-database-mysql-mysqlhistorycontext.html
+++ b/references/yaaf-database-mysql-mysqlhistorycontext.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>MyDropCreateDatabaseIfModelChanges<'TContext> - Yaaf.Database</title>
+    <title>MySqlHistoryContext - Yaaf.Database</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="Matthias Dittrich">
@@ -38,9 +38,9 @@
 
 
 
-<h1>MyDropCreateDatabaseIfModelChanges<'TContext> </h1>
+<h1>MySqlHistoryContext </h1>
 <div class="xmldoc">
-    Defined in Yaaf.Database.dll.
+    Defined in Yaaf.Database.MySQL.dll.
 </div>
 <div class="xmldoc">
 </div>
@@ -53,15 +53,15 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '19', 19)" onmouseover="showTip(event, '19', 19)">
-            new(seedMethod)
+          <code onmouseout="hideTip(event, '24', 24)" onmouseover="showTip(event, '24', 24)">
+            new(con, scheme)
           </code>
-          <div class="tip" id="19">
-            <strong>Signature:</strong> (seedMethod:(&#39;TContext -&gt; unit)) -&gt; MyDropCreateDatabaseIfModelChanges&lt;&#39;TContext&gt;<br />
+          <div class="tip" id="24">
+            <strong>Signature:</strong> (con:DbConnection * scheme:string) -&gt; MySqlHistoryContext<br />
                       </div>
         </td>
         <td class="xmldoc">
-            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/NUnitInitializer.fs#L13-13" class="github-link">
+            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database.MySQL/MySQLHelper.fs#L5-5" class="github-link">
               <img src="../content/img/github.png" class="normal" />
               <img src="../content/img/github-blue.png" class="hover" />
             </a>
