--- a/references/yaaf-database-mycreatedatabaseifnotexists-1.html
+++ b/references/yaaf-database-mycreatedatabaseifnotexists-1.html
@@ -53,14 +53,18 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '14', 14)" onmouseover="showTip(event, '14', 14)">
+          <code onmouseout="hideTip(event, '18', 18)" onmouseover="showTip(event, '18', 18)">
             new(seedMethod)
           </code>
-          <div class="tip" id="14">
-            <strong>Signature:</strong> seedMethod:Action&lt;&#39;TContext&gt; -&gt; unit<br />
+          <div class="tip" id="18">
+            <strong>Signature:</strong> (seedMethod:(&#39;TContext -&gt; unit)) -&gt; MyCreateDatabaseIfNotExists&lt;&#39;TContext&gt;<br />
                       </div>
         </td>
         <td class="xmldoc">
+            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/NUnitInitializer.fs#L20-20" class="github-link">
+              <img src="../content/img/github.png" class="normal" />
+              <img src="../content/img/github-blue.png" class="hover" />
+            </a>
           
         </td>
       </tr>
