Update generated documentation 0.0.3

--- a/references/yaaf-database-abstractapplicationdbcontext.html
+++ b/references/yaaf-database-abstractapplicationdbcontext.html
@@ -120,7 +120,7 @@
             MySaveChanges()
           </code>
           <div class="tip" id="4">
-            <strong>Signature:</strong> unit -&gt; Async&lt;unit&gt;<br />
+            <strong>Signature:</strong> unit -&gt; Task&lt;unit&gt;<br />
                       </div>
         </td>
         <td class="xmldoc">
@@ -146,7 +146,7 @@
             MySaveChanges(context)
           </code>
           <div class="tip" id="5">
-            <strong>Signature:</strong> context:DbContext -&gt; Async&lt;unit&gt;<br />
+            <strong>Signature:</strong> context:DbContext -&gt; Task&lt;unit&gt;<br />
                       </div>
         </td>
         <td class="xmldoc">
