--- a/references/yaaf-database-abstractapplicationidentitydbcontext-1.html
+++ b/references/yaaf-database-abstractapplicationidentitydbcontext-1.html
@@ -120,7 +120,7 @@
             MySaveChanges()
           </code>
           <div class="tip" id="9">
-            <strong>Signature:</strong> unit -&gt; Async&lt;unit&gt;<br />
+            <strong>Signature:</strong> unit -&gt; Task&lt;unit&gt;<br />
                       </div>
         </td>
         <td class="xmldoc">
