--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -35,6 +35,12 @@
       <div class="row">
         <div class="span9" id="main">
           
+<h3><a name="0-0-3" class="anchor" href="#0-0-3">0.0.3</a></h3>
+
+<ul>
+<li>Fix api breakage of MySaveChanges.</li>
+</ul>
+
 <h3><a name="0-0-2" class="anchor" href="#0-0-2">0.0.2</a></h3>
 
 <ul>
