Update generated documentation 0.0.5

--- a/ReleaseNotes.html
+++ b/ReleaseNotes.html
@@ -35,6 +35,13 @@
       <div class="row">
         <div class="span9" id="main">
           
+<h3><a name="0-0-5" class="anchor" href="#0-0-5">0.0.5</a></h3>
+
+<ul>
+<li>Added Upgrade API.</li>
+<li>Remove Automatic Migrations (cannot be done in a sane way, now the application should just call the new Upgrade API)</li>
+</ul>
+
 <h3><a name="0-0-4" class="anchor" href="#0-0-4">0.0.4</a></h3>
 
 <ul>
