--- a/references/index.html
+++ b/references/index.html
@@ -63,6 +63,14 @@
         </tr>
         <tr>
           <td class="type-name">
+            <a href="yaaf-database-databaseupgradeexception.html">DatabaseUpgradeException</a>
+          </td>
+          <td class="xmldoc">
+ This error indicates that the sending pipeline was already closed, so sending is not longer possible (IE the closing element </stream> was already sent!)
+</br></td>
+        </tr>
+        <tr>
+          <td class="type-name">
             <a href="yaaf-database-emptyconfiguration.html">EmptyConfiguration</a>
           </td>
           <td class="xmldoc"></td>
@@ -70,6 +78,12 @@
         <tr>
           <td class="type-name">
             <a href="yaaf-database-fsharphelper.html">FSharpHelper</a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+        <tr>
+          <td class="type-name">
+            <a href="yaaf-database-iupgradedatabaseprovider.html">IUpgradeDatabaseProvider</a>
           </td>
           <td class="xmldoc"></td>
         </tr>
@@ -94,6 +108,25 @@
         <tr>
           <td class="type-name">
             <a href="yaaf-database-nunitinitializer-1.html">NUnitInitializer<'TContext></a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+    </tbody>
+  </table>
+  <table class="table table-bordered module-list">
+    <thead>
+      <tr><td>Module</td><td>Description</td></tr>
+    </thead>
+    <tbody>
+        <tr>
+          <td class="module-name">
+            <a href="yaaf-database-databaseupgrade.html">DatabaseUpgrade</a>
+          </td>
+          <td class="xmldoc"></td>
+        </tr>
+        <tr>
+          <td class="module-name">
+            <a href="yaaf-database-upgradedatabaseproviderextensions.html">UpgradeDatabaseProviderExtensions</a>
           </td>
           <td class="xmldoc"></td>
         </tr>
