--- a/references/yaaf-database-upgradedatabaseproviderextensions.html
+++ b/references/yaaf-database-upgradedatabaseproviderextensions.html
@@ -2,10 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Yaaf.Database
-</title>
+    <title>UpgradeDatabaseProviderExtensions - Yaaf.Database</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Some helpers for projects using the EntityFramework with multiple databases.">
+    <meta name="description" content="">
     <meta name="author" content="Matthias Dittrich">
 
     <script src="https://code.jquery.com/jquery-1.8.0.js"></script>
@@ -36,36 +35,44 @@
       <div class="row">
         <div class="span9" id="main">
           
-<!-- GENERATED FROM COMMIT: 6181d664303dfc80da522eaf32b35acfa338ece9 -->
-<h1><a name="Yaaf-Database" class="anchor" href="#Yaaf-Database">Yaaf.Database</a></h1>
 
-<h2><a name="Documentation" class="anchor" href="#Documentation"><a href="https://matthid.github.io/Yaaf.Database/">Documentation</a></a></h2>
 
-<h2><a name="Build-status" class="anchor" href="#Build-status">Build status</a></h2>
 
-<p><strong>Development Branch</strong></p>
-
-<p><a href="https://travis-ci.org/matthid/Yaaf.Database"><img src="https://travis-ci.org/matthid/Yaaf.Database.svg?branch=develop" alt="Build Status" /></a>
-<a href="https://ci.appveyor.com/project/matthid/yaaf-database/branch/develop"><img src="https://ci.appveyor.com/api/projects/status/6cblovp1hws8jlor/branch/develop?svg=true" alt="Build status" /></a></p>
-
-<p><strong>Master Branch</strong></p>
-
-<p><a href="https://travis-ci.org/matthid/Yaaf.Database"><img src="https://travis-ci.org/matthid/Yaaf.Database.svg?branch=master" alt="Build Status" /></a>
-<a href="https://ci.appveyor.com/project/matthid/yaaf-database/branch/master"><img src="https://ci.appveyor.com/api/projects/status/6cblovp1hws8jlor/branch/master?svg=true" alt="Build status" /></a></p>
-
-<h2><a name="NuGet" class="anchor" href="#NuGet">NuGet</a></h2>
-
-<div class="row">
-  <div class="span1"></div>
-  <div class="span6">
-    <div class="well well-small" id="nuget">
-      The Yaaf.Database library can be <a href="https://nuget.org/packages/Yaaf.Database">installed from NuGet</a>:
-      <pre>PM> Install-Package Yaaf.Database</pre>
-    </div>
-  </div>
-  <div class="span1"></div>
+<h1>UpgradeDatabaseProviderExtensions</h1>
+<div class="xmldoc">
+    Defined in Yaaf.Database.dll.
+</div>
+<div class="xmldoc">
 </div>
 
+<!-- Render nested types and modules, if there are any -->
+
+  <h3>Type extensions</h3>
+  <table class="table table-bordered member-list">
+    <thead>
+      <tr><td>Type extension</td><td>Description</td></tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td class="member-name">
+
+          <code onmouseout="hideTip(event, '4', 4)" onmouseover="showTip(event, '4', 4)">
+            Upgrade()
+          </code>
+          <div class="tip" id="4">
+            <strong>Signature:</strong> unit -&gt; unit<br />
+                      </div>
+        </td>
+        <td class="xmldoc">
+            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/AbstractApplicationDbContext.fs#L73-73" class="github-link">
+              <img src="../content/img/github.png" class="normal" />
+              <img src="../content/img/github-blue.png" class="hover" />
+            </a>
+          
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
         </div>
         <div class="span3">
