--- a/references/yaaf-database-abstractapplicationidentitydbcontext-1.html
+++ b/references/yaaf-database-abstractapplicationidentitydbcontext-1.html
@@ -53,15 +53,15 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '6', 6)" onmouseover="showTip(event, '6', 6)">
-            new(nameOrConnectionString, doInit)
+          <code onmouseout="hideTip(event, '10', 10)" onmouseover="showTip(event, '10', 10)">
+            new(nameOrConnectionString)
           </code>
-          <div class="tip" id="6">
-            <strong>Signature:</strong> (nameOrConnectionString:string * doInit:bool option) -&gt; AbstractApplicationIdentityDbContext&lt;&#39;TUser&gt;<br />
+          <div class="tip" id="10">
+            <strong>Signature:</strong> nameOrConnectionString:string -&gt; AbstractApplicationIdentityDbContext&lt;&#39;TUser&gt;<br />
                       </div>
         </td>
         <td class="xmldoc">
-            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/AbstractApplicationIdentityDbContext.fs#L19-19" class="github-link">
+            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/AbstractApplicationIdentityDbContext.fs#L20-20" class="github-link">
               <img src="../content/img/github.png" class="normal" />
               <img src="../content/img/github-blue.png" class="hover" />
             </a>
@@ -79,34 +79,16 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '7', 7)" onmouseover="showTip(event, '7', 7)">
-            DoInit()
+          <code onmouseout="hideTip(event, '11', 11)" onmouseover="showTip(event, '11', 11)">
+            FixScript(arg1)
           </code>
-          <div class="tip" id="7">
-            <strong>Signature:</strong> unit -&gt; unit<br />
-                      </div>
-        </td>
-        <td class="xmldoc">
-            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/AbstractApplicationIdentityDbContext.fs#L34-34" class="github-link">
-              <img src="../content/img/github.png" class="normal" />
-              <img src="../content/img/github-blue.png" class="hover" />
-            </a>
-          
-        </td>
-      </tr>
-      <tr>
-        <td class="member-name">
-
-          <code onmouseout="hideTip(event, '8', 8)" onmouseover="showTip(event, '8', 8)">
-            Init()
-          </code>
-          <div class="tip" id="8">
-            <strong>Signature:</strong> unit -&gt; unit<br />
+          <div class="tip" id="11">
+            <strong>Signature:</strong> string -&gt; string<br />
               <strong>Modifiers:</strong> abstract<br />
                       </div>
         </td>
         <td class="xmldoc">
-            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/AbstractApplicationIdentityDbContext.fs#L31-31" class="github-link">
+            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/AbstractApplicationIdentityDbContext.fs#L32-32" class="github-link">
               <img src="../content/img/github.png" class="normal" />
               <img src="../content/img/github-blue.png" class="hover" />
             </a>
@@ -116,10 +98,29 @@
       <tr>
         <td class="member-name">
 
-          <code onmouseout="hideTip(event, '9', 9)" onmouseover="showTip(event, '9', 9)">
+          <code onmouseout="hideTip(event, '12', 12)" onmouseover="showTip(event, '12', 12)">
+            GetMigrator()
+          </code>
+          <div class="tip" id="12">
+            <strong>Signature:</strong> unit -&gt; DbMigrator<br />
+              <strong>Modifiers:</strong> abstract<br />
+                      </div>
+        </td>
+        <td class="xmldoc">
+            <a href="https://github.com/matthid//blob/master/src/source/Yaaf.Database/AbstractApplicationIdentityDbContext.fs#L35-35" class="github-link">
+              <img src="../content/img/github.png" class="normal" />
+              <img src="../content/img/github-blue.png" class="hover" />
+            </a>
+          
+        </td>
+      </tr>
+      <tr>
+        <td class="member-name">
+
+          <code onmouseout="hideTip(event, '13', 13)" onmouseover="showTip(event, '13', 13)">
             MySaveChanges()
           </code>
-          <div class="tip" id="9">
+          <div class="tip" id="13">
             <strong>Signature:</strong> unit -&gt; Task&lt;unit&gt;<br />
                       </div>
         </td>
